# awesomeleads

./: .gitignore  Cargo.toml  Follow_up_Mailgun_Template.html  Investment_Proposal_Mailgun_Template.html  Rocket.toml  config.yml  deploy.sh  run_daily_campaign.sh  sources.yml
src/: config.rs  database.rs  email_rate_limiting.rs  main.rs  models.rs  sources.rs
src/api/: companies.rs  crawl.rs  leads.rs  mod.rs  projects.rs  sources.rs  stats.rs
src/cli/: build_project_filter.rs  cli.rs  display_analysis_results.rs  get_phase2_progress_summary.rs  get_prioritized_projects.rs  is_low_value_project.rs  mod.rs  run.rs  run_analyze_single_repo.rs  run_business_crawler.rs  run_export_emails.rs  run_phase1.rs  run_phase2.rs  run_phase2_smart_batch.rs  run_phase3.rs  run_send_emails.rs  run_web_crawler.rs  show_database_stats.rs  show_phase2_progress.rs
src/email_export/: business_export.rs  config.rs  database.rs  exporter.rs  mod.rs  processor.rs  types.rs
src/email_sender/: mod.rs
src/scraper_util/: core.rs  github.rs  meta_source.rs  mod.rs  project_handler.rs  utils.rs
src/server/: mod.rs  routes.rs
src/web_crawler/: business_extractor.rs  contact_extractor.rs  crawler.rs  mod.rs  types.rs
