[package]
name = "lead-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
mobc = "0.8.5"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
octocrab = "0.44.1"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
async-trait = "0.1.88"
dialoguer = "0.11.0"
url = "2.5.4"
rusqlite = { version = "0.36.0", features = ["bundled", "chrono"] }
reqwest = { version = "0.12.20", features = ["json"] }
fastrand = "2.3.0"
